@@ -4,14 +4,14 @@
 from sql import Null
 from sql.conditionals import Case
 
-from trytond.model import ModelView, ModelSQL, fields
+from trytond.model import ModelView, ModelSQL, DeactivableMixin, fields
 
 __all__ = [
     'MPTT',
     ]
 
 
-class MPTT(ModelSQL, ModelView):
+class MPTT(DeactivableMixin, ModelSQL, ModelView):
     'Modified Preorder Tree Traversal'
     __name__ = 'test.mptt'
     name = fields.Char('Name', required=True)
@@ -20,7 +20,6 @@ class MPTT(ModelSQL, ModelView):
     left = fields.Integer('Left', required=True, select=True)
     right = fields.Integer('Right', required=True, select=True)
     childs = fields.One2Many('test.mptt', 'parent', 'Children')
-    active = fields.Boolean('Active')
 
     @classmethod
     def validate(cls, record):
@@ -31,10 +30,6 @@ class MPTT(ModelSQL, ModelView):
     def order_sequence(tables):
         table, _ = tables[None]
         return [Case((table.sequence == Null, 0), else_=1), table.sequence]
-
-    @staticmethod
-    def default_active():
-        return True
 
     @staticmethod
     def default_left():
